hphp/hack/test/typecheck/new_parent2.php.exp
File "new_parent2.php", line 20, characters 9-11:
No method 'foo' in B (Typing[4053])
File "new_parent2.php", line 19, characters 14-19:
This is why I think it is an object of type B
File "new_parent2.php", line 19, characters 14-19:
  where the class 'B' (the parent of the enclosing) class was referenced here
File "new_parent2.php", line 12, characters 7-7:
Declaration of B is here
